# ModelMonitoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
drift/: main.py
drift/config/: config.py
drift/pipeline/: runner.py
drift/quality_checks/: base_check.py  completeness.py  consistency.py  range_check.py
drift/stages/: data_reading.py  preprocessing.py  transformation.py
mdrift/: data.csv  main.py
mdrift/checks/: base_check.py  duplicate_check.py  null_check.py  range_check.py
mdrift/config/: quality_config.py
mdrift/exception/: custome_exception.py
mdrift/pipeline/: pipeline_runner.py
mdrift/script/: generate_data.py
mdrift/stages/: data_reader.py  preprocessor.py  transformer.py
