[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdrift"
version = "0.1.0"
description = "Dritness check"
authors = [
    {name = "Vikash Singh", email = "Vikash.Singh@linuxmail.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.1",
    "pyyaml"
]

[project.urls]
"Homepage" = "https://github.com/VikashS/ModelMonitoring"